tests/language_modules/07_string/valid/string_return.vf
module StringReturn

function label() returns String
is
    return "ready"
end label

end StringReturn