tests/language_modules/07_string/invalid_semantics/string_replace_argument_count.vf
module StringReplaceArgumentCount

function label() returns String
is
    return String.replace("vera", "v")
end label

end StringReplaceArgumentCount